[package]
name = "api-userbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
mongodb = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0.97"
env_logger = "0.10.0"
clap = { version = "4.4.11", features = ["derive"]}
